--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "author": "chuhlomin",
   "license": "ISC",
+
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "express": "^4.17.1",
     "hbs": "^4.1.1"
